<resources>
    <string name="app_name">CuentaBolas</string>
    <string name="tv_cuenta_bolas">Cuenta Bolas</string>
    <string name="bt_easy">Easy</string>
    <string name="bt_normal">Normal</string>
    <string name="bt_hard">Hard</string>
    <string name="tv_dificulty">Select a game mode</string>
    <string name="ready">Are U Ready?</string>
    <string name="tv_cuantas">¿Recuerdas el número de bolas?</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="tv_azul">Azul</string>
    <string name="tv_rojo">Rojo</string>
    <string name="tv_verde">Verde</string>
    <string name="tv_rosa">Rosa</string>
    <string name="tv_magenta">Magenta</string>
    <string name="tv_fail">FAIL!</string>
    <string name="tv_success">SUCCESS!</string>
    <string name="tv_resultado">Habia:</string>
    <string name="tv_result_azul">Pelotas Azules: </string>
    <string name="tv_resul_roja">Pelotas Rojas: </string>
    <string name="tv_result_verde">Pelotas Verdes: </string>
    <string name="tv_result_magenta">Pelotas Magenta: </string>
    <string name="tv_result_amarilla">Pelotas Amarillas: </string>
    <string name="bt_picture">Foto</string>
    <string name="tv_result">Resultado</string>
    <string name="desc_image">Image</string>
    <string name="tv_bolas">nBolas</string>
    <string name="btFinish">Finalizar</string>
    <string name="tv_victory_pic">Winner winner chicken dinner</string>
    <string name="tv_lose_pic">Best luck next time!</string>
    <string name="tx_player_picture">Take a picture from the player?</string>
</resources>