<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvHabia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_resultado"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/tvBolas"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvBlueResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_result_azul"
        android:textColor="#000DFF"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvRedResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_resul_roja"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreenResult"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvGreenResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_result_verde"
        android:textColor="#02A818"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBlueResult"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvMagentaResult"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="38dp"
        android:text="@string/tv_result_magenta"
        android:textColor="#933A8E"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvGreenResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBlueResult"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btFinish"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/desc_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGreenResult"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBolas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/tv_bolas"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvHabia"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btFinish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPhoto"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>