<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btNormal"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/bt_normal"
        app:layout_constraintBottom_toTopOf="@+id/btHard"
        app:layout_constraintEnd_toEndOf="@+id/btHard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btHard"
        app:layout_constraintTop_toBottomOf="@+id/btEasy" />

    <TextView
        android:id="@+id/tvDificulty"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/tv_dificulty"
        app:layout_constraintBottom_toTopOf="@+id/btEasy"
        app:layout_constraintEnd_toEndOf="@+id/btEasy"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/btEasy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btEasy"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/bt_easy"
        app:layout_constraintBottom_toTopOf="@+id/btNormal"
        app:layout_constraintEnd_toEndOf="@+id/btNormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btNormal"
        app:layout_constraintTop_toBottomOf="@+id/tvDificulty" />

    <Button
        android:id="@+id/btHard"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/bt_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNormal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>