<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessActivity">

    <TextView
        android:id="@+id/tvCuantas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:labelFor="@id/etCuantas"
        android:text="@string/tv_cuantas"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCuantas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAzul"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvMagenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_magenta"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etMagenta"
        app:layout_constraintEnd_toStartOf="@+id/etMagenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etMagenta"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etMagenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etRojo"
        app:layout_constraintEnd_toEndOf="@+id/tvCuantas"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvCuantas"
        app:layout_constraintTop_toBottomOf="@+id/tvCuantas"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rojo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etRojo"
        app:layout_constraintEnd_toStartOf="@+id/etRojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRojo"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etVerde"
        app:layout_constraintEnd_toEndOf="@+id/tvCuantas"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvCuantas"
        app:layout_constraintTop_toBottomOf="@+id/etMagenta"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_verde"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etVerde"
        app:layout_constraintEnd_toStartOf="@+id/etVerde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etVerde"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etAzul"
        app:layout_constraintEnd_toEndOf="@+id/tvCuantas"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvCuantas"
        app:layout_constraintTop_toBottomOf="@+id/etRojo"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_azul"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etAzul"
        app:layout_constraintEnd_toStartOf="@+id/etAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAzul"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btAceptar"
        app:layout_constraintEnd_toEndOf="@+id/tvCuantas"
        app:layout_constraintStart_toStartOf="@+id/tvCuantas"
        app:layout_constraintTop_toBottomOf="@+id/etVerde"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>